**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 3.2                                 *
*	LAST UPDATE: Apr 24 2017                     *
*                                                *
**************************************************

Update: Apr 24th 2017
==================================================
->Added methods to AnalysisSuiteClusterCharge for interpolating (using scipy interpolate) cluster charge Mean, MPV, and Sigma data

Update: Apr 21st 2017
==================================================
->Renanmed "GainMapAnalysisSuite" to "AnalysisSuiteGainMap" both the class name and also the *.py file
->Renanmed "ClusterChargeAnalysisSuite" to "AnalysisSuiteClusterCharge" both the class name and also the *.py file

Update: Apr 20th 2017
==================================================
->Moved python classes PARAMS_DET, PARAMS_GAIN, PARAMS_GEO, and PARAMS_PD from GainMapAnalysisSuite.py to Utilities.py
->Renamed python class PARAMS_GEO to PARAMS_ETASECTOR
->Moved methods calcGain, calcGainErr from python class GainMapAnalysisSuite to PARAMS_GAIN
->Moved method calcPD from python class GainMapAnalysisSuite to PARAMS_PD
->Moved method calcROSectorBoundaries from python class GainMapAnalysisSuite to PARAMS_DET
->Moved method rejectOutliers from python class GainMapAnalysisSuite to a standalone function in Utilities.py

Update: Apr 18th 2017
==================================================
->AnalyzeResponseUniformityClusters::initHistosClusters() when intitalizing the number of bins in the cluster position
observable, this method will now automatically account for # of iPhi sector's declared for an Eta Sector in the input
mapping config file (e.g. nbConnect) rather than this being hard-coded

Update: Apr 10th 2017
==================================================