@@ -1,0 +1,30 @@
+#=====Input Files=====
+File_Framework_Output   data/sliceTestAna/QC5_Resp_Uni/GE11-VII-L-CERN-0002_Summary_Physics_Optimized_RandTrig_XRay40kV100uA_580uA_TimeCorr_DPGGeo_AnaWithFits.root
+File_ClustQ_Mean    data/TestBeam2013_FNAL_ClustCharge/ClustChargeData_Mean.txt
+File_ClustQ_MPV     data/TestBeam2013_FNAL_ClustCharge/ClustChargeData_MPV.txt
+File_ClustQ_Sigma   data/TestBeam2013_FNAL_ClustCharge/ClustChargeData_Sigma.txt
+File_CluseSize  figures/GE11-IV-CERN-0001/GE11-IV-CERN-0001_GIF_TestBeam_AvgClustSize_vs_Gain.root
+#=====Device Under Test Parameters=====
+DUT_GAIN_P0 3.49545e-02
+DUT_GAIN_P0_Err 1.98035e-04
+DUT_GAIN_P1 -1.40236e+01
+DUT_GAIN_P1_Err 1.28383e-01
+DUT_iEta_Clust_Size_Norm   5
+DUT_iEta_QC5_Gain_Cal   4
+DUT_iPhi_Clust_Size_Norm   2
+DUT_iPhi_QC5_Gain_Cal   2
+DUT_Mapping_File    config/Mapping_GE11-VII-L.cfg
+DUT_QC5_Resp_Uni_HVPt   580
+DUT_Serial_Number   GE11-VII-L-CERN-0002
+DUT_Slice_Granularity   32
+#=====Detector for ClustQ Landau Parameters=====
+Det_ClustQ_Serial_Number   GE11-III-FIT-0001
+Det_ClustQ_GAIN_P0  7.04964e-03
+Det_ClustQ_GAIN_P0_Err  1.23211e-05
+Det_ClustQ_GAIN_P1  -1.48229e+01
+Det_ClustQ_GAIN_P1_Err  4.09164e-02
+#=====Detector for MIP ClustSize Parameters=====
+Det_ClustSize_Serial_Number GE11-IV-CERN-0001
+Det_ClustSize_TF1_TName fit_GE11-IV-CERN-0001_GIF_AvgClustSize_vs_Gain_52
+#=====Efficiency Info=====
+Eff_HVPt_List   600,625,650,660,670,680,690,700,710,720,730
